--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "typescript": "^3.8.3"
   },
   "scripts": {
+    "dev": "cp .env.development .env && NODE_ENV=development nodemon",
+    "start": "cp .env.production .env&& NODE_ENV=production node ./dist",
     "check": "gts check",
     "clean": "gts clean",
     "compile": "tsc -p .",
