--- a/package.json
+++ b/package.json
@@ -38,10 +38,16 @@
     "posttest": "npm run check"
   },
   "dependencies": {
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.11.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "morgan": "^1.9.1",
     "nodemon": "^2.0.2",
-    "ts-node": "^8.6.2"
+    "reflect-metadata": "^0.1.13",
+    "routing-controllers": "^0.8.1-alpha.2",
+    "ts-node": "^8.6.2",
+    "typedi": "^0.8.0"
   }
 }
