--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "posttest": "npm run check"
   },
   "dependencies": {
+    "apollo-server-express": "^2.11.0",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
     "cors": "^2.8.5",
