--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,5 @@
     "resolveJsonModule": true
   },
   "include": ["./src/"],
-  "exclude": ["./dist/"]
+  "exclude": ["./dist/", "./src/test"]
 }
