--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/cors": "^2.8.6",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.3",
+    "@types/graphql": "^14.5.0",
     "@types/jest": "^25.1.3",
     "@types/morgan": "^1.9.0",
     "@types/node": "^13.7.7",
@@ -22,6 +23,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "gts": "^1.1.2",
     "jest": "^25.1.0",
+    "prisma2": "^2.0.0-preview024",
     "supertest": "^4.0.2",
     "ts-jest": "^25.2.1",
     "typescript": "^3.8.3"
@@ -38,13 +40,18 @@
     "posttest": "npm run check"
   },
   "dependencies": {
-    "apollo-server-express": "^2.11.0",
+    "@prisma/client": "^2.0.0-preview024",
+    "@types/node-fetch": "^2.5.5",
+    "apollo-server": "^2.11.0",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "graphql": "^14.6.0",
     "morgan": "^1.9.1",
+    "nexus": "^0.12.0-rc.13",
+    "nexus-prisma": "^0.11.1",
     "nodemon": "^2.0.2",
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.8.1-alpha.2",
